# STM32L476RG-Rust-Blinky

./: .gdbinit  Cargo.toml  README.md  memory.x
src/: main.rs
