[package]
authors = ["Alex Precosky <precosky@mac.com>"]
edition = "2021"
readme = "README.md"
name = "rust-blinky-stm32l476rg"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
volatile-register = "0.2.0"
#stm32l4xx-hal = "0.6.0"

[dependencies.stm32l4xx-hal]
features = ["stm32l4x6"]
version = "0.6.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
